--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,7 @@ cython_debug/
 #.idea/
 
 # automated setup & pc specific venv files 
-/venv/*
-/__setup/__setupFiles/__exes/*
-/__setup/__setupFiles/_batchLaunchers/allie
+/venv
+__setupFiles/__exes
+__setupFiles/_batchLaunchers/allie
+
