--- a/.gitignore
+++ b/.gitignore
@@ -160,7 +160,8 @@ cython_debug/
 #.idea/
 
 # automated setup & pc specific venv files 
-/venv
-__setupFiles/__exes
+
+__setupFiles/
 __setupFiles/_batchLaunchers/allie
 
+/__fsoVenv
